@@ -3,7 +3,7 @@ name = Unix-SetuidWrapper
 [Prereqs]
 perl                 = 5.010001
 namespace::autoclean = 0.22
-Class::Usul          = v0.57.0
+Class::Usul          = v0.58.0
 File::DataClass      = v0.60.0
 File::UnixAuth       = v0.22.0
 Moo                  = 2.000001
